--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.pucpr</groupId>
 	<artifactId>exercicio</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>exercicio</name>
-	<description>Exercicios Spring Boot</description>
+	<name>biblioteca</name>
+	<description>Projeto Final PUCPR - Biblioteca</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
